update achievement creation for courses and players