@@ -1,10 +1,6 @@
 package de.unistuttgart.overworldbackend.service;
 
-import de.unistuttgart.overworldbackend.data.Achievement;
-import de.unistuttgart.overworldbackend.data.AchievementStatistic;
-import de.unistuttgart.overworldbackend.data.Course;
-import de.unistuttgart.overworldbackend.data.Player;
-import de.unistuttgart.overworldbackend.data.World;
+import de.unistuttgart.overworldbackend.data.*;
 import de.unistuttgart.overworldbackend.data.enums.AchievementCategory;
 import de.unistuttgart.overworldbackend.data.enums.AchievementDescription;
 import de.unistuttgart.overworldbackend.data.enums.AchievementImage;
@@ -13,10 +9,12 @@ import de.unistuttgart.overworldbackend.repositories.AchievementRepository;
 import de.unistuttgart.overworldbackend.repositories.AchievementStatisticRepository;
 import de.unistuttgart.overworldbackend.repositories.CourseRepository;
 import de.unistuttgart.overworldbackend.repositories.PlayerRepository;
+
 import java.util.*;
 import java.util.stream.Collectors;
 import javax.persistence.EntityManager;
 import javax.persistence.PersistenceContext;
+
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.context.event.ApplicationReadyEvent;
@@ -24,7 +22,6 @@ import org.springframework.context.event.EventListener;
 import org.springframework.stereotype.Service;
 import org.springframework.data.domain.Sort;
 import org.springframework.scheduling.annotation.EnableScheduling;
-import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.transaction.annotation.Transactional;
 
 @Service
@@ -52,159 +49,104 @@ public class AchievementService {
     private AchievementStatisticRepository achievementStatisticRepository;
 
     /**
-     * Checks for all players the current achievements adds new created achievements to the player and removes none existing achievements.
+     * Creates achievements for each course.
+     * Checks for all players in each course their current achievement statistics, adds new ones and removes non exiting ones.
      */
     @EventListener(ApplicationReadyEvent.class)
     public void updatePlayerStatisticAchievements() {
-        List<Achievement> currentAchievementList = new ArrayList<>();
+        List<Player> players = playerRepository.findAll();
 
         for (final Course course : courseRepository.findAll()) {
-            createBookAchievements(currentAchievementList, course);
-            createAchievementForEachMinigame(currentAchievementList, course);
-            createNpcAchievements(currentAchievementList, course);
-            createDungeonAchievements(currentAchievementList, course);
-            createMinigameAchievements(currentAchievementList, course);
-            createOpenerAndLevelUpAchievements(currentAchievementList, course);
-            createAllOtherAchievements(currentAchievementList, course);
+            List<Achievement> courseAchievements = createCourseAchievements(course);
+
+            for (final Player player : players) {
+                boolean changed = createNewAchievementStatistics(course, courseAchievements, player);
+
+                boolean removed = player.getAchievementStatistics().removeIf(stat ->
+                        stat.getCourseId() == course.getId() &&
+                                !stat.isCompleted() &&
+                                courseAchievements.stream().noneMatch(ach -> ach.getId().equals(stat.getAchievement().getId()))
+                );
+
+                if (changed || removed) {
+                    playerRepository.save(player);
+                }
+            }
+        }
+    }
+
+    private boolean createNewAchievementStatistics(Course course, List<Achievement> courseAchievements, Player player) {
+        boolean changed  = false;
+
+        Map<UUID, AchievementStatistic> existingStats = player.getAchievementStatistics()
+                .stream()
+                .filter(stat -> stat.getCourseId() == course.getId())
+                .collect(Collectors.toMap(
+                        stat -> stat.getAchievement().getId(),
+                        stat -> stat
+                ));
+
+        for (Achievement achievement : courseAchievements) {
+            if (!existingStats.containsKey(achievement.getId())) {
+                player.getAchievementStatistics().add(
+                        new AchievementStatistic(player, course.getId(), achievement)
+                );
+                changed = true;
+            }
         }
 
-        achievementRepository.saveAll(currentAchievementList);
+        return changed;
+    }
 
-        /*List<Achievement> existingAchievements = achievementRepository.findAll(Sort.by("achievementTitle"));
+    /**
+     * Creates all achievements of a course.
+     *
+     * @param course course whose achievements are created
+     * @return list of created achievements
+     */
+    private List<Achievement> createCourseAchievements(Course course) {
+        List<Achievement> courseAchievements = new ArrayList<>();
 
-        existingAchievements.sort(Comparator.comparing(Achievement::getAchievementTitle));
-        List<Achievement> achievementsToDelete = existingAchievements.stream()
-                .filter(existingAchievement ->
-                        currentAchievementList.stream()
-                                .noneMatch(currentAchievement ->
-                                        currentAchievement.getAchievementTitle().equals(existingAchievement.getAchievementTitle())
-                                )
-                )
-                .filter(achievement ->
-                        playerRepository.findAll().stream()
-                                .flatMap(player -> player.getAchievementStatistics().stream())
-                                .noneMatch(statistic ->
-                                        statistic.getAchievement().equals(achievement) && statistic.isCompleted()
-                                )
-                )
-                .toList();
+        createBookAchievements(courseAchievements, course);
+        createAchievementForEachMinigame(courseAchievements, course);
+        createNpcAchievements(courseAchievements, course);
+        createDungeonAchievements(courseAchievements, course);
+        createMinigameAchievements(courseAchievements, course);
+        createOpenerAndLevelUpAchievements(courseAchievements, course);
+        createAllOtherAchievements(courseAchievements, course);
 
+        achievementRepository.saveAll(courseAchievements);
+        return courseAchievements;
+    }
+
+    /**
+     * Creates achievement statistics for a player's courses.
+     *
+     * @param player player whose achievement statistics are created
+     */
+    public void initializeAchievements(Player player) {
         for (final Course course : courseRepository.findAll()) {
-            for (final Player player : playerRepository.findAll()) {
-                for (final Achievement achievement : currentAchievementList) {
-                    if (player.getAchievementStatistics()
-                            .stream()
-                            .noneMatch(achievementStatistic ->
-                                    achievementStatistic.getAchievement().getAchievementTitle().equals(achievement.getAchievementTitle()))) {
-                        player.getAchievementStatistics().add(new AchievementStatistic(player, course, achievement));
-                    }
-                }
+            List<Achievement> courseAchievements = course.getCourseAchievements();
 
-
-                player.getAchievementStatistics().removeIf(achievementStatistic ->
-                        achievementsToDelete.stream()
-                                .anyMatch(achievement ->
-                                        achievement.getAchievementTitle().equals(achievementStatistic.getAchievement().getAchievementTitle())
-
-                                )
-                );
+            if (createNewAchievementStatistics(course, courseAchievements, player)) {
                 playerRepository.save(player);
             }
         }
-
-        if (!achievementsToDelete.isEmpty()) {
-            entityManager.flush();
-            entityManager.clear();
-            achievementRepository.deleteAll(achievementsToDelete);
-        }
-
-        achievementRepository.saveAll(currentAchievementList);*/
-        initializeAchievements();
     }
 
     /**
-     * Initializes for all players their achievements of their courses.
+     * Creates achievements for a course and updates the achievement statistics of its players.
+     *
+     * @param course course whose achievements are created
      */
-    private void initializeAchievements() {
+    public void initializeAchievements(Course course) {
+        List<Achievement> courseAchievements = createCourseAchievements(course);
+
         for (final Player player : playerRepository.findAll()) {
-            initializeAchievementsOfPlayer(player);
-            //removeNotExistentAchievements(player, achievementRepository.findAll());
-        }
-    }
-
-    /**
-     * Initializes all achievement statistics for a player's courses if non-existent.
-     *
-     * @param player player whose achievements are initialized
-     */
-    public void initializeAchievementsOfPlayer(Player player) {
-        for (final Course course : courseRepository.findAll()) {
-            createAchievementStatistics(course, player);
-        }
-    }
-
-    /**
-     * Initializes all achievement statistics for a course's players if non-existent.
-     *
-     * @param course player whose achievements are initialized
-     */
-    public void initializeAchievementsOfCourse(Course course) {
-        for (final Player player : playerRepository.findAll()) {
-            createAchievementStatistics(course, player);
-        }
-    }
-
-    /**
-     * Creates all achievement statistics for a given course and given player if non-existent.
-     *
-     * @param course course the achievements should be created for
-     * @param player player the achievements should be created for
-     */
-    private void createAchievementStatistics(Course course, Player player) {
-        final List<Achievement> achievements = achievementRepository.findAll();
-        player
-            .getAchievementStatistics()
-            .removeIf(stat ->
-                achievements
-                    .stream()
-                    .noneMatch(achievement -> achievement.getId().equals(stat.getAchievement().getId()) && !stat.isCompleted())
-            );
-
-        for (final Achievement achievement : achievements) {
-            if (
-                achievement.getCourseId() == course.getId() &&
-                player
-                    .getAchievementStatistics()
-                    .stream()
-                    .noneMatch(achievementStatistic ->
-                        achievementStatistic.getAchievement().getId().equals(achievement.getId()) &&
-                        achievementStatistic.getCourse().equals(course)
-                    )
-            ) {
-                final AchievementStatistic stat = new AchievementStatistic(player, course, achievement);
-                player.getAchievementStatistics().add(stat);
-                course.getAchievementStatistics().add(stat);
+            if (createNewAchievementStatistics(course, courseAchievements, player)) {
+                playerRepository.save(player);
             }
         }
-    }
-
-    /**
-     * Removes all non-existent achievements of a player.
-     *
-     * @param player to remove non-existent achievements from
-     */
-    private void removeNotExistentAchievements(Player player, List<Achievement> achievements) {
-        player
-            .getAchievementStatistics()
-            .removeIf(achievementStatistic ->
-                achievements
-                    .stream()
-                    .noneMatch(achievement ->
-                        achievement
-                            .getAchievementTitle()
-                            .equals(achievementStatistic.getAchievement().getAchievementTitle())
-                    )
-            );
     }
 
     /**
@@ -212,10 +154,9 @@ public class AchievementService {
      * This function calculates the number of books, that have description and text and are available in each world and in total,
      * and creates achievements based on the number of books and active worlds.
      *
-     * @param currentAchievementList The list of achievements to which the newly created achievements will be added.
-     *
+     * @param courseAchievements The list of achievements to which the newly created achievements will be added.
      */
-    private void createBookAchievements(List<Achievement> currentAchievementList, Course course) {
+    public void createBookAchievements(List<Achievement> courseAchievements, Course course) {
         int[] bookCountWorld = new int[5];
         int bookCountInTotal = 0;
         String achievementTitlePrefix = "READER_WORLD_";
@@ -223,31 +164,31 @@ public class AchievementService {
         for (int i = 1; i <= 4; i++) {
             bookCountWorld[i] = getBookCount(i, course.getId());
             bookCountInTotal += bookCountWorld[i];
-            if (bookCountWorld[i] !=0) {
+            if (bookCountWorld[i] != 0) {
                 if (i == 1 || isWorldActive(i, course.getId())) {
-                    currentAchievementList.addAll(Arrays.asList(
+                    courseAchievements.add(
                             new Achievement(
                                     AchievementTitle.valueOf(achievementTitlePrefix + i),
                                     AchievementDescription.INTERACT_WITH_BOOKS.getDescriptionWithRequiredAmount(bookCountWorld[i]),
                                     AchievementImage.BOOK_IMAGE.getImageName(),
                                     bookCountWorld[i],
                                     Arrays.asList(AchievementCategory.ACHIEVING, AchievementCategory.EXPLORING),
-                                    course.getId()
+                                    course
                             )
-                    ));
+                    );
                 }
             }
             if (bookCountInTotal != 0) {
-                currentAchievementList.addAll(Arrays.asList(
+                courseAchievements.add(
                         new Achievement(
                                 AchievementTitle.READER,
                                 AchievementDescription.INTERACT_WITH_BOOKS_IN_TOTAL.getDescriptionWithRequiredAmount(bookCountInTotal),
                                 AchievementImage.BOOK_IMAGE.getImageName(),
                                 bookCountInTotal,
                                 Arrays.asList(AchievementCategory.ACHIEVING, AchievementCategory.EXPLORING),
-                                course.getId()
+                                course
                         )
-                ));
+                );
             }
         }
 
@@ -258,10 +199,9 @@ public class AchievementService {
      * This function calculates the number of NPCs, that have description and text and are available in each world and in total,
      * and creates achievements based on the number of NPCs and active worlds.
      *
-     * @param currentAchievementList The list of achievements to which the newly created achievements will be added.
-     *
+     * @param courseAchievements The list of achievements to which the newly created achievements will be added.
      */
-    private void createNpcAchievements(List<Achievement> currentAchievementList, Course course) {
+    private void createNpcAchievements(List<Achievement> courseAchievements, Course course) {
 
         int[] npcCountWorld = new int[5];
         int npcCountInTotal = 0;
@@ -272,30 +212,30 @@ public class AchievementService {
             npcCountInTotal += npcCountWorld[i];
             if (npcCountWorld[i] != 0) {
                 if (i == 1 || isWorldActive(i, course.getId())) {
-                    currentAchievementList.addAll(Arrays.asList(
+                    courseAchievements.add(
                             new Achievement(
                                     AchievementTitle.valueOf(achievementTitlePrefix + i),
                                     AchievementDescription.TALK_TO_NPC.getDescriptionWithRequiredAmount(npcCountWorld[i]),
                                     AchievementImage.NPC_IMAGE.getImageName(),
                                     npcCountWorld[i],
-                                    Arrays.asList(AchievementCategory.EXPLORING),
-                                    course.getId()
+                                    List.of(AchievementCategory.EXPLORING),
+                                    course
                             )
-                    ));
+                    );
                 }
             }
         }
-        if(npcCountInTotal != 0){
-            currentAchievementList.addAll(Arrays.asList(
+        if (npcCountInTotal != 0) {
+            courseAchievements.add(
                     new Achievement(
                             AchievementTitle.COMMUNICATOR,
                             AchievementDescription.TALK_TO_NPC_IN_TOTAL.getDescriptionWithRequiredAmount(npcCountInTotal),
                             AchievementImage.NPC_IMAGE.getImageName(),
                             npcCountInTotal,
-                            Arrays.asList(AchievementCategory.EXPLORING),
-                            course.getId()
+                            List.of(AchievementCategory.EXPLORING),
+                            course
                     )
-            ));
+            );
         }
     }
 
@@ -303,24 +243,23 @@ public class AchievementService {
      * Creates 4 achievements related to dungeons.
      * This function creates achievements for each active world if there is at least one dungeon active.
      *
-     * @param currentAchievementList The list of achievements to which the newly created achievements will be added.
-     *
+     * @param courseAchievements The list of achievements to which the newly created achievements will be added.
      */
-    private void createDungeonAchievements(List<Achievement> currentAchievementList, Course course) {
-        int[] countActiveDungeons =  new int[5];
+    private void createDungeonAchievements(List<Achievement> courseAchievements, Course course) {
+        int[] countActiveDungeons = new int[5];
         String achievementTitle = "MINER_WORLD_";
 
-        for(int i = 1; i <= 4; i++){
+        for (int i = 1; i <= 4; i++) {
             countActiveDungeons[i] = getActiveDungeonCount(i, course.getId());
             if (countActiveDungeons[i] >= 1) {
-                currentAchievementList.addAll(Arrays.asList(new Achievement(
+                courseAchievements.add(new Achievement(
                         AchievementTitle.valueOf(achievementTitle + i),
                         AchievementDescription.UNLOCK_DUNGEONS.getDescriptionWithRequiredAmount(i),
                         AchievementImage.DUNGEON_IMAGE.getImageName(),
                         1,
                         Arrays.asList(AchievementCategory.ACHIEVING, AchievementCategory.EXPLORING),
-                        course.getId()
-                )));
+                        course
+                ));
             }
         }
     }
@@ -330,45 +269,44 @@ public class AchievementService {
      * This function calculates the number of minigames, that are created in each world
      * and creates achievements based on the number of minigames and active worlds.
      *
-     * @param currentAchievementList The list of achievements to which the newly created achievements will be added.
-     *
+     * @param courseAchievements The list of achievements to which the newly created achievements will be added.
      */
-    private void createMinigameAchievements(List<Achievement> currentAchievementList, Course course) {
+    private void createMinigameAchievements(List<Achievement> courseAchievements, Course course) {
         int minigameCountInTotal = 0;
         int requiredAmountForAchievement;
         for (int i = 1; i <= 4; i++) {
             minigameCountInTotal += getMinigameCount(i, course.getId());
         }
 
-        if(minigameCountInTotal != 0){
-            if(minigameCountInTotal == 1 || minigameCountInTotal == 2 || minigameCountInTotal == 3) {
+        if (minigameCountInTotal != 0) {
+            if (minigameCountInTotal == 1 || minigameCountInTotal == 2 || minigameCountInTotal == 3) {
                 requiredAmountForAchievement = minigameCountInTotal;
             } else {
                 requiredAmountForAchievement = minigameCountInTotal - 2;
             }
-            currentAchievementList.addAll(Arrays.asList(
+            courseAchievements.addAll(Arrays.asList(
                     new Achievement(
                             AchievementTitle.MINIGAME_ACHIEVER,
                             AchievementDescription.COMPLETE_MINIGAMES.getDescriptionWithRequiredAmount(requiredAmountForAchievement),
                             AchievementImage.STAR_IMAGE.getImageName(),
                             requiredAmountForAchievement,
                             Arrays.asList(AchievementCategory.ACHIEVING, AchievementCategory.COMPETITIVE),
-                            course.getId()
+                            course
                     ),
                     new Achievement(
                             AchievementTitle.MINIGAME_SPOTS_FINDER,
                             AchievementDescription.FIND_MINIGAME_SPOTS.getDescriptionWithRequiredAmount(requiredAmountForAchievement),
                             AchievementImage.MINIGAME_SPOT_IMAGE.getImageName(),
                             requiredAmountForAchievement,
-                            Arrays.asList(AchievementCategory.EXPLORING),
-                            course.getId()
+                            List.of(AchievementCategory.EXPLORING),
+                            course
                     )
             ));
         } else {
             List<Achievement> achievementsToDelete = achievementRepository.findAll(Sort.by("achievementTitle")).stream()
                     .filter(achievement ->
-                            AchievementTitle.MINIGAME_ACHIEVER.toString().equals(achievement.getAchievementTitle()) ||
-                                    AchievementTitle.MINIGAME_SPOTS_FINDER.toString().equals(achievement.getAchievementTitle()))
+                            AchievementTitle.MINIGAME_ACHIEVER.equals(achievement.getAchievementTitle()) ||
+                                    AchievementTitle.MINIGAME_SPOTS_FINDER.equals(achievement.getAchievementTitle()))
                     .collect(Collectors.toList());
 
             achievementRepository.deleteAll(achievementsToDelete);
@@ -379,35 +317,34 @@ public class AchievementService {
      * Creates 1 achievement for level up if the world 2 is active and 3 achievements for 3 worlds, if they are active.
      * This function check if the necessary world is active and creates achievements based on it.
      *
-     * @param currentAchievementList The list of achievements to which the newly created achievements will be added.
-     *
+     * @param courseAchievements The list of achievements to which the newly created achievements will be added.
      */
-    private void createOpenerAndLevelUpAchievements(List<Achievement> currentAchievementList, Course course) {
+    private void createOpenerAndLevelUpAchievements(List<Achievement> courseAchievements, Course course) {
         String achievementTitle = "OPENER_WORLD_";
         for (int i = 2; i <= 4; i++) {
             if (isWorldActive(i, course.getId())) {
-                currentAchievementList.addAll(Arrays.asList(
+                courseAchievements.add(
                         new Achievement(
                                 AchievementTitle.valueOf(achievementTitle + i),
                                 AchievementDescription.UNLOCK_WORLD.getDescriptionWithRequiredAmount(i),
                                 AchievementImage.GLASS_IMAGE.getImageName(),
                                 1,
                                 Arrays.asList(AchievementCategory.ACHIEVING, AchievementCategory.EXPLORING),
-                                course.getId()
+                                course
                         )
-                ));
+                );
 
                 if (i == 2) {
-                    currentAchievementList.addAll(Arrays.asList(
+                    courseAchievements.add(
                             new Achievement(
                                     AchievementTitle.LEVEL_UP,
                                     AchievementDescription.LEVEL_UP.getDescriptionWithRequiredAmount(i),
                                     AchievementImage.LEVEL_UP_IMAGE.getImageName(),
                                     i,
-                                    Arrays.asList(AchievementCategory.ACHIEVING),
-                                    course.getId()
+                                    List.of(AchievementCategory.ACHIEVING),
+                                    course
                             )
-                    ));
+                    );
                 }
             }
         }
@@ -417,23 +354,22 @@ public class AchievementService {
      * Creates achievement for each type of minigames, that were created in course, based on their name and active
      * worlds, in which these minigames were created.
      *
-     * @param currentAchievementList The list of achievements to which the newly created achievements will be added.
-     *
+     * @param courseAchievements The list of achievements to which the newly created achievements will be added.
      */
-    private void createAchievementForEachMinigame(List<Achievement> currentAchievementList, Course course) {
+    private void createAchievementForEachMinigame(List<Achievement> courseAchievements, Course course) {
         List<String> minigameNames = getMinigameNames(course.getId());
         minigameNames.forEach(minigameName -> {
-            if (!minigameName.toUpperCase().equals("NONE") && !minigameName.toUpperCase().equals("REGEXGAME")) {
-                currentAchievementList.addAll(Arrays.asList(
+            if (!minigameName.equalsIgnoreCase("NONE") && !minigameName.equalsIgnoreCase("REGEXGAME")) {
+                courseAchievements.add(
                         new Achievement(
                                 AchievementTitle.valueOf(minigameName.toUpperCase() + "_MASTER"),
                                 AchievementDescription.valueOf(minigameName.toUpperCase()).getDescription(),
                                 AchievementImage.valueOf(minigameName.toUpperCase() + "_IMAGE").getImageName(),
                                 1,
                                 Arrays.asList(AchievementCategory.ACHIEVING, AchievementCategory.COMPETITIVE),
-                                course.getId()
+                                course
                         )
-                ));
+                );
             }
         });
     }
@@ -442,18 +378,17 @@ public class AchievementService {
      * Creates all static achievements, that are independent of course settings and do not require conditions to be met
      * for the achievement to be created
      *
-     * @param currentAchievementList The list of achievements to which the newly created achievements will be added.
-     *
+     * @param courseAchievements The list of achievements to which the newly created achievements will be added.
      */
-    private void createAllOtherAchievements(List<Achievement> currentAchievementList, Course course) {
-        currentAchievementList.addAll(Arrays.asList(
+    private void createAllOtherAchievements(List<Achievement> courseAchievements, Course course) {
+        courseAchievements.addAll(Arrays.asList(
                 new Achievement(
                         AchievementTitle.GO_FOR_A_WALK,
                         AchievementDescription.WALK_TILES.getDescriptionWithRequiredAmount(10),
                         AchievementImage.FOOT_IMAGE.getImageName(),
                         10,
                         Arrays.asList(AchievementCategory.EXPLORING, AchievementCategory.ACHIEVING),
-                        course.getId()
+                        course
                 ),
                 new Achievement(
                         AchievementTitle.GO_FOR_A_LONGER_WALK,
@@ -461,15 +396,15 @@ public class AchievementService {
                         AchievementImage.FOOT_IMAGE.getImageName(),
                         1000,
                         Arrays.asList(AchievementCategory.EXPLORING, AchievementCategory.ACHIEVING),
-                        course.getId()
+                        course
                 ),
                 new Achievement(
                         AchievementTitle.SELECT_CHARACTER,
                         AchievementDescription.CHANGE_SKIN.getDescription(),
                         AchievementImage.NPC_IMAGE.getImageName(),
                         1,
-                        Arrays.asList(AchievementCategory.EXPLORING),
-                        course.getId()
+                        List.of(AchievementCategory.EXPLORING),
+                        course
                 ),
                 new Achievement(
                         AchievementTitle.BEGINNER,
@@ -477,7 +412,7 @@ public class AchievementService {
                         AchievementImage.CLOCK_IMAGE.getImageName(),
                         30,
                         Arrays.asList(AchievementCategory.ACHIEVING, AchievementCategory.EXPLORING, AchievementCategory.SOCIALIZING, AchievementCategory.COMPETITIVE),
-                        course.getId()
+                        course
                 ),
                 new Achievement(
                         AchievementTitle.EXPERIENCED_PLAYER,
@@ -485,7 +420,7 @@ public class AchievementService {
                         AchievementImage.CLOCK_IMAGE.getImageName(),
                         90,
                         Arrays.asList(AchievementCategory.ACHIEVING, AchievementCategory.EXPLORING, AchievementCategory.SOCIALIZING, AchievementCategory.COMPETITIVE),
-                        course.getId()
+                        course
                 ),
                 new Achievement(
                         AchievementTitle.SPEEDRUNNER,
@@ -493,7 +428,7 @@ public class AchievementService {
                         AchievementImage.ROCKET_IMAGE.getImageName(),
                         30,
                         Arrays.asList(AchievementCategory.ACHIEVING, AchievementCategory.COMPETITIVE),
-                        course.getId()
+                        course
                 ),
                 new Achievement(
                         AchievementTitle.TELEPORTER_BEGINNER,
@@ -501,7 +436,7 @@ public class AchievementService {
                         AchievementImage.TELEPORTER_IMAGE.getImageName(),
                         4,
                         Arrays.asList(AchievementCategory.ACHIEVING, AchievementCategory.EXPLORING),
-                        course.getId()
+                        course
                 ),
                 new Achievement(
                         AchievementTitle.TELEPORTER_PROFESSIONAL,
@@ -509,7 +444,7 @@ public class AchievementService {
                         AchievementImage.TELEPORTER_IMAGE.getImageName(),
                         10,
                         Arrays.asList(AchievementCategory.ACHIEVING, AchievementCategory.EXPLORING),
-                        course.getId()
+                        course
                 ),
                 new Achievement(
                         AchievementTitle.TRAVELER,
@@ -517,7 +452,7 @@ public class AchievementService {
                         AchievementImage.UFO_IMAGE.getImageName(),
                         3,
                         Arrays.asList(AchievementCategory.ACHIEVING, AchievementCategory.EXPLORING),
-                        course.getId()
+                        course
                 ),
                 new Achievement(
                         AchievementTitle.GAMER,
@@ -525,7 +460,7 @@ public class AchievementService {
                         AchievementImage.CALENDER_IMAGE.getImageName(),
                         2,
                         Arrays.asList(AchievementCategory.ACHIEVING, AchievementCategory.EXPLORING, AchievementCategory.SOCIALIZING, AchievementCategory.COMPETITIVE),
-                        course.getId()
+                        course
                 ),
                 new Achievement(
                         AchievementTitle.PROFESSIONAL_GAMER,
@@ -533,39 +468,39 @@ public class AchievementService {
                         AchievementImage.CALENDER_IMAGE.getImageName(),
                         5,
                         Arrays.asList(AchievementCategory.ACHIEVING, AchievementCategory.EXPLORING, AchievementCategory.SOCIALIZING, AchievementCategory.COMPETITIVE),
-                        course.getId()
+                        course
                 ),
                 new Achievement(
                         AchievementTitle.GOAT,
                         AchievementDescription.LEADEROARD_1.getDescription(),
                         AchievementImage.MEDAL_1_IMAGE.getImageName(),
                         1,
-                        Arrays.asList(AchievementCategory.COMPETITIVE),
-                        course.getId()
+                        List.of(AchievementCategory.COMPETITIVE),
+                        course
                 ),
                 new Achievement(
                         AchievementTitle.ONE_OF_THE_BEST_PLAYERS,
                         AchievementDescription.LEADEROARD_2_3.getDescription(),
                         AchievementImage.MEDAL_3_IMAGE.getImageName(),
                         1,
-                        Arrays.asList(AchievementCategory.COMPETITIVE),
-                        course.getId()
+                        List.of(AchievementCategory.COMPETITIVE),
+                        course
                 ),
                 new Achievement(
                         AchievementTitle.GET_COINS,
                         AchievementDescription.GET_COINS.getDescriptionWithRequiredAmount(50),
                         AchievementImage.COIN_IMAGE.getImageName(),
                         50,
-                        Arrays.asList(AchievementCategory.ACHIEVING),
-                        course.getId()
+                        List.of(AchievementCategory.ACHIEVING),
+                        course
                 ),
                 new Achievement(
                         AchievementTitle.GET_MORE_COINS,
                         AchievementDescription.GET_COINS.getDescriptionWithRequiredAmount(150),
                         AchievementImage.COIN_IMAGE.getImageName(),
                         150,
-                        Arrays.asList(AchievementCategory.ACHIEVING),
-                        course.getId()
+                        List.of(AchievementCategory.ACHIEVING),
+                        course
                 )
         ));
     }
@@ -578,12 +513,11 @@ public class AchievementService {
      *                description or text.
      * @return The total number of books in the specified world that have a description and text, or 0 if the world is
      * not active.
-     *
      */
-    private int getBookCount(int worldId, int courseId){
+    private int getBookCount(int worldId, int courseId) {
         World world = worldService.getWorldByIndexFromCourse(courseId, worldId);
 
-        if(isWorldActive(worldId, courseId) || worldId == 1) {
+        if (isWorldActive(worldId, courseId) || worldId == 1) {
             long bookCountInWorld = world.getBooks().stream()
                     .filter(book -> book.getDescription() != null && !book.getText().isEmpty())
                     .count();
@@ -601,12 +535,11 @@ public class AchievementService {
      *                description or text.
      * @return The total number of NPCs in the specified world that have a description and text, or 0 if the world is
      * not active.
-     *
      */
-    private int getNpcCount(int worldId, int courseId){
+    private int getNpcCount(int worldId, int courseId) {
         World world = worldService.getWorldByIndexFromCourse(courseId, worldId);
 
-        if(isWorldActive(worldId, courseId) || worldId == 1) {
+        if (isWorldActive(worldId, courseId) || worldId == 1) {
             long npcCountInWorld = world.getNpcs().stream()
                     .filter(npc -> npc.getDescription() != null && npc.getText() != null && !npc.getText().isEmpty())
                     .count();
@@ -622,7 +555,7 @@ public class AchievementService {
      * @param worldId The ID of the world to check.
      * @return True if the world is active, false otherwise.
      */
-    private boolean isWorldActive(int worldId, int courseId){
+    private boolean isWorldActive(int worldId, int courseId) {
         World world = worldService.getWorldByIndexFromCourse(courseId, worldId);
         return world.isActive();
     }
@@ -633,11 +566,11 @@ public class AchievementService {
      * @param worldId The ID of the world from which the count of active dungeons is to be retrieved.
      * @return The number of active dungeons in the specified world.
      */
-    private int getActiveDungeonCount(int worldId, int courseId){
+    private int getActiveDungeonCount(int worldId, int courseId) {
         World world = worldService.getWorldByIndexFromCourse(courseId, worldId);
 
         float countOfActiveDungeonsInWorld = world.getDungeons().stream()
-                .filter(dungeon -> dungeon.isActive())
+                .filter(Area::isActive)
                 .count();
         return (int) countOfActiveDungeonsInWorld;
     }
@@ -648,9 +581,9 @@ public class AchievementService {
      * @param worldId The ID of the world from which the count of minigames is to be retrieved.
      * @return The number of minigames in the specified world that were created, or 0 if the world is not active.
      */
-    private int getMinigameCount(int worldId, int courseId){
+    private int getMinigameCount(int worldId, int courseId) {
         World world = worldService.getWorldByIndexFromCourse(courseId, worldId);
-        if(isWorldActive(worldId, courseId) || worldId == 1) {
+        if (isWorldActive(worldId, courseId) || worldId == 1) {
             long minigameCountInWorld = world.getMinigameTasks().stream()
                     .filter(minigame -> minigame.getGame() != null && !"NONE".equals(minigame.getGame().name()))
                     .count();
@@ -670,16 +603,14 @@ public class AchievementService {
 
         List<World> activeWorlds = allWorlds.stream()
                 .filter(world -> world.isActive() || world.getIndex() == 1)
-                .collect(Collectors.toList());
+                .toList();
 
-        List<String> minigameNames = activeWorlds.stream()
+        return activeWorlds.stream()
                 .flatMap(world -> world.getMinigameTasks().stream())
                 .filter(minigame -> minigame.getGame() != null)
                 .map(minigame -> minigame.getGame().name())
                 .distinct()
                 .collect(Collectors.toList());
-
-        return minigameNames;
     }
 }
 
